Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2012-09-07)
----------------

- Nothing changed yet.


1.0 (2012-09-06)
----------------

- Initial release